--- a/index.html
+++ b/index.html
@@ -21,18 +21,8 @@
             <h2>Bachelor Développement Informatique - 3e ANNÉE (B3)</h2>
         </div>
     </section>
-    <section>
-        <h2>Objectif</h2>
-        <p>Après 6 mois de formation, 2 mois de stage, je recherche une entreprise pour m’accompagner pour la suite de
-            ma reconversion.</p>
-        <p> Je suis disponible à partir de juillet 2024.</p>
-        <p> Je souhaite ensuite poursuivre ma reconversion
-            en Master.</p>
-    </section>
-</header>
-<main class="parent">
     <section class="div1">
-        <h3>Informations Personnelles</h3>
+        <h2>Informations Personnelles</h2>
         <ul>
             <li><strong>Âge :</strong> 34 ans</li>
             <li><strong>Permis de conduire</strong></li>
@@ -45,181 +35,187 @@
             </li>
         </ul>
     </section>
-
-    <section class="div2">
-        <h3>Qualités Professionnelles</h3>
-        <ul>
-            <li><strong>Rigueur</strong></li>
-            <li><strong>Curiosité</strong></li>
-            <li><strong>Créativité</strong></li>
-            <li><strong>Travail d'équipe</strong></li>
-            <li><strong>Adaptabilité</strong></li>
-        </ul>
+</header>
+<main>
+    <section>
+        <section>
+            <h2>Objectif</h2>
+            <p>Après 6 mois de formation, 2 mois de stage, je recherche une entreprise pour m’accompagner pour la suite
+                de
+                ma reconversion.</p>
+            <p> Je suis disponible à partir de juillet 2024.</p>
+            <p> Je souhaite ensuite poursuivre ma reconversion
+                en Master.</p>
+        </section>
+        <section>
+            <h2>Expériences</h2>
+            <article>
+                <h3>Stagiaire Développement Web - AFRODOMDEV</h3>
+                <p><em>Avril 2024 à mai 2024</em></p>
+                <ul>
+                    <li><strong>Développement du site e-commerce "Spicy-Shot"</strong></li>
+                    <li>Maquettage des interfaces utilisateurs avec Figma.</li>
+                    <li>Développement de la partie back et front à l’aide de <strong>Symfony 6.4</strong>,
+                        <strong>Twig</strong>, <strong>Tailwind</strong>, <strong>JavaScript</strong>,
+                        internationalisation,
+                        tests unitaires.
+                    </li>
+                    <li>Manipulation d’une base de données <strong>MariaDB</strong> et de l’ORM
+                        <strong>Doctrine</strong>.
+                    </li>
+                    <li>Développement dans un environnement <strong>Docker</strong> et les outils Composer, Yarn,
+                        WebPack
+                        Encore, GitHub, PhpStorm.
+                    </li>
+                </ul>
+            </article>
+            <article>
+                <h3>Projet Informatiques - ENI Ecole d'Informatique</h3>
+                <p><em>Octobre 2023 à avril 2024</em></p>
+                <ul>
+                    <li><p><strong>Développement de “Brain Pop!”</strong></p> - Un jeu de Memory avec
+                        <strong>HTML</strong>,
+                        <strong>CSS</strong> et <strong>JavaScript</strong>.
+                    </li>
+                    <li><p><strong>Développement de “NullPointerException”</strong> (en équipe)</p> - Un site d’enchères
+                        sous
+                        <strong>Java Spring Boot</strong> et <strong>SQL Server</strong> : application web organisée en
+                        couches.
+                    </li>
+                    <li><p><strong>Analyse, Conception et développement de “Sortir.com”</strong> (en équipe)</p> - Un
+                        site
+                        d’organisation d’événements avec <strong>Symfony</strong>, <strong>Doctrine</strong> et <strong>MySQL</strong>
+                        : définition de test, set d’outils de passage des tests.
+                    </li>
+                </ul>
+            </article>
+            <article>
+                <h3>Auto-formation - Home Sweet Home!</h3>
+                <p><em>Janvier 2023 à octobre 2023</em></p>
+                <ul>
+                    <li><p><strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong></p> -
+                        <em>OpenClassRoom</em>,
+                        <em>freeCodeCamp</em>, <em>Udemy</em>, <em>CodingGame</em>, <em>CodeWar</em></li>
+                </ul>
+            </article>
+            <article>
+                <h3>Pâtissier - Diverses entreprises</h3>
+                <p><em>Juillet 2008 à janvier 2023</em></p>
+            </article>
+        </section>
     </section>
 
-    <section class="div4">
-        <h2>Expériences</h2>
-        <article>
-            <h3>Stagiaire Développement Web - AFRODOMDEV</h3>
-            <p><em>Avril 2024 à mai 2024</em></p>
-            <ul>
-                <li><strong>Développement du site e-commerce "Spicy-Shot"</strong></li>
-                <li>Maquettage des interfaces utilisateurs avec Figma.</li>
-                <li>Développement de la partie back et front à l’aide de <strong>Symfony 6.4</strong>,
-                    <strong>Twig</strong>, <strong>Tailwind</strong>, <strong>JavaScript</strong>,
-                    internationalisation,
-                    tests unitaires.
-                </li>
-                <li>Manipulation d’une base de données <strong>MariaDB</strong> et de l’ORM
-                    <strong>Doctrine</strong>.
-                </li>
-                <li>Développement dans un environnement <strong>Docker</strong> et les outils Composer, Yarn,
-                    WebPack
-                    Encore, GitHub, PhpStorm.
-                </li>
-            </ul>
-        </article>
-
-        <article>
-            <h3>Projet Informatiques - ENI Ecole d'Informatique</h3>
-            <p><em>Octobre 2023 à avril 2024</em></p>
-            <ul>
-                <li><p><strong>Développement de “Brain Pop!”</strong></p> - Un jeu de Memory avec
-                    <strong>HTML</strong>,
-                    <strong>CSS</strong> et <strong>JavaScript</strong>.
-                </li>
-                <li><p><strong>Développement de “NullPointerException”</strong> (en équipe)</p> - Un site d’enchères
-                    sous
-                    <strong>Java Spring Boot</strong> et <strong>SQL Server</strong> : application web organisée en
-                    couches.
-                </li>
-                <li><p><strong>Analyse, Conception et développement de “Sortir.com”</strong> (en équipe)</p> - Un
-                    site
-                    d’organisation d’événements avec <strong>Symfony</strong>, <strong>Doctrine</strong> et <strong>MySQL</strong>
-                    : définition de test, set d’outils de passage des tests.
-                </li>
-            </ul>
-        </article>
-
-        <article>
-            <h3>Auto-formation - Home Sweet Home!</h3>
-            <p><em>Janvier 2023 à octobre 2023</em></p>
-            <ul>
-                <li><p><strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong></p> -
-                    <em>OpenClassRoom</em>,
-                    <em>freeCodeCamp</em>, <em>Udemy</em>, <em>CodingGame</em>, <em>CodeWar</em></li>
-            </ul>
-        </article>
-
-        <article>
-            <h3>Pâtissier - Diverses entreprises</h3>
-            <p><em>Juillet 2008 à janvier 2023</em></p>
-        </article>
-    </section>
-
-    <section class="div3">
-        <h2>Formation</h2>
-        <article>
-            <h3>Développeur Web et Web Mobile - ENI Ecole d'Informatique</h3>
-            <p><em>Octobre 2023 à avril 2024</em></p>
-            <ul>
-                <li>Préparation au titre « Développeur Web et Web Mobile » homologué par l’État, niveau 5 (Bac +2)</li>
-            </ul>
-        </article>
-
-        <article>
-            <h3>Bac Pro Cuisine - Lycée Hôtelier de Dinard</h3>
-            <p><em>Septembre 2006 à juin 2008</em></p>
-            <ul>
-                <li>Apprentissage du métier de Cuisinier.</li>
-            </ul>
-        </article>
-
-        <article>
-            <h3>BTM Pâtissier - CFA Ker Lann</h3>
-            <p><em>Juillet 2012 à septembre 2014</em></p>
-            <ul>
-                <li>Apprentissage du métier de pâtissier.</li>
-            </ul>
-        </article>
-    </section>
-
-    <section class="div5">
+    <section>
         <h2>Compétences</h2>
-        <div>
-            <article>
-                <h3>Langages</h3>
-                <ul>
-                    <li><strong>Java</strong></li>
-                    <li><strong>PHP</strong></li>
-                    <li><strong>SQL</strong></li>
-                    <li><strong>HTML5</strong></li>
-                    <li><strong>CSS3</strong></li>
-                    <li><strong>JavaScript</strong></li>
-                </ul>
-            </article>
+        <article>
+            <h3>Langages</h3>
+            <ul>
+                <li><strong>Java</strong></li>
+                <li><strong>PHP</strong></li>
+                <li><strong>SQL</strong></li>
+                <li><strong>HTML5</strong></li>
+                <li><strong>CSS3</strong></li>
+                <li><strong>JavaScript</strong></li>
+            </ul>
+        </article>
 
-            <article>
-                <h3>Environnements</h3>
-                <ul>
-                    <li><strong>IntelliJ</strong></li>
-                    <li><strong>PhpStorm</strong></li>
-                    <li><strong>WebStorm</strong></li>
-                    <li><strong>GitHub</strong></li>
-                    <li><strong>Docker</strong></li>
-                </ul>
-            </article>
+        <article>
+            <h3>Environnements</h3>
+            <ul>
+                <li><strong>IntelliJ</strong></li>
+                <li><strong>PhpStorm</strong></li>
+                <li><strong>WebStorm</strong></li>
+                <li><strong>GitHub</strong></li>
+                <li><strong>Docker</strong></li>
+            </ul>
+        </article>
 
-            <article>
-                <h3>Library/Framework</h3>
-                <ul>
-                    <li><strong>SpringBoot</strong></li>
-                    <li><strong>Symfony</strong></li>
-                    <li><strong>Angular</strong></li>
-                    <li><strong>Express.js</strong></li>
-                    <li><strong>Bootstrap</strong></li>
-                    <li><strong>Tailwind</strong></li>
-                </ul>
-            </article>
-            <article>
-                <h3>ORM</h3>
-                <ul>
-                    <li><strong>Doctrine</strong></li>
-                </ul>
-            </article>
-            <article>
-                <h3>Méthodes</h3>
-                <ul>
-                    <li><strong>Agile</strong></li>
-                    <li><strong>UML</strong></li>
-                    <li><strong>MVC</strong></li>
-                    <li><strong>développement en couches</strong></li>
-                </ul>
-            </article>
-            <article>
-                <h3>Base De Données</h3>
-                <ul>
-                    <li><strong>SQL Server</strong></li>
-                    <li><strong>MySQL</strong></li>
-                    <li><strong>MongoDB</strong></li>
-                </ul>
-            </article>
-        </div>
+        <article>
+            <h3>Library/Framework</h3>
+            <ul>
+                <li><strong>SpringBoot</strong></li>
+                <li><strong>Symfony</strong></li>
+                <li><strong>Angular</strong></li>
+                <li><strong>Express.js</strong></li>
+                <li><strong>Bootstrap</strong></li>
+                <li><strong>Tailwind</strong></li>
+            </ul>
+        </article>
+        <article>
+            <h3>ORM</h3>
+            <ul>
+                <li><strong>Doctrine</strong></li>
+            </ul>
+        </article>
+        <article>
+            <h3>Méthodes</h3>
+            <ul>
+                <li><strong>Agile</strong></li>
+                <li><strong>UML</strong></li>
+                <li><strong>MVC</strong></li>
+                <li><strong>développement en couches</strong></li>
+            </ul>
+        </article>
+        <article>
+            <h3>Base De Données</h3>
+            <ul>
+                <li><strong>SQL Server</strong></li>
+                <li><strong>MySQL</strong></li>
+                <li><strong>MongoDB</strong></li>
+            </ul>
+        </article>
     </section>
 
-    <section class="div6">
-        <article>
+    <section>
+        <section>
+            <h2>Qualités Professionnelles</h2>
+            <ul>
+                <li><strong>Rigueur</strong></li>
+                <li><strong>Curiosité</strong></li>
+                <li><strong>Créativité</strong></li>
+                <li><strong>Travail d'équipe</strong></li>
+                <li><strong>Adaptabilité</strong></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Formation</h2>
+            <article>
+                <h3>Développeur Web et Web Mobile - ENI Ecole d'Informatique</h3>
+                <p><em>Octobre 2023 à avril 2024</em></p>
+                <ul>
+                    <li>Préparation au titre « Développeur Web et Web Mobile » homologué par l’État, niveau 5 (Bac +2)
+                    </li>
+                </ul>
+            </article>
+
+            <article>
+                <h3>Bac Pro Cuisine - Lycée Hôtelier de Dinard</h3>
+                <p><em>Septembre 2006 à juin 2008</em></p>
+                <ul>
+                    <li>Apprentissage du métier de Cuisinier.</li>
+                </ul>
+            </article>
+
+            <article>
+                <h3>BTM Pâtissier - CFA Ker Lann</h3>
+                <p><em>Juillet 2012 à septembre 2014</em></p>
+                <ul>
+                    <li>Apprentissage du métier de pâtissier.</li>
+                </ul>
+            </article>
+        </section>
+        <section>
+            <h2>Langue</h2>
+            <p><strong>Anglais :</strong> Niveau B1</p>
+        </section>
+        <section>
             <h2>Centres d'intérêt</h2>
             <ul>
                 <li><strong>Cinéma :</strong> Science Fiction, Comédie, Horreur, Anime, Séries</li>
                 <li><strong>Lectures :</strong> Science-Fiction, Heroic Fantasy</li>
                 <li><strong>Jeux Vidéos :</strong> RPG, Stratégie, Gestion</li>
             </ul>
-        </article>
-        <article>
-            <h2>Langue</h2>
-            <p><strong>Anglais :</strong> Niveau B1</p>
-        </article>
+        </section>
     </section>
 </main>
 </body>
