--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Antoine Ferron - Développeur Web et Mobile</title>
     <meta name="description"
           content="Antoine Ferron, développeur web et mobile en reconversion, cherche une entreprise pour continuer sa formation en informatique et réaliser un Master. Découvrez ses compétences, expériences et formations.">
+    <meta name="google-site-verification" content="c2gLXZP7xpLUbFsa4cqss5xXBqK_IW3vgUxRyboxmkE" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&family=Julius+Sans+One&display=swap"
