--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Antoine Ferron - Développeur Web et Mobile</title>
     <meta name="description"
-          content="Antoine Ferron, développeur web et mobile en reconversion, cherche une entreprise pour continuer sa formation en informatique et réaliser un Master. Découvrez ses compétences, expériences et formations.">
+          content="Antoine Ferron, développeur informatique, cherche une entreprise pour continuer sa formation en informatique et réaliser un Master. Découvrez ses compétences, expériences et formations.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&family=Julius+Sans+One&display=swap"
@@ -15,10 +15,10 @@
 <body>
 <header>
     <section>
-        <img src="./antoine-ferron.webp" alt="Photo de Antoine Ferron" width="200" height="200">
+        <img src="./antoine-ferron.webp" alt="Photo de Antoine Ferron">
         <div>
             <h1>Antoine Ferron</h1>
-            <h2>Bachelor Développement Informatique - 3e ANNÉE (B3)</h2>
+            <h2>Développeur Informatique</h2>
         </div>
     </section>
     <section class="div1">
@@ -30,9 +30,6 @@
             </li>
             <li><strong>LinkedIn :</strong> <a href="https://www.linkedin.com/in/antoine-ferron6">Antoine Ferron</a>
             </li>
-            <li><strong>Adresse :</strong> 6 allé Henri Bergson, 35136 Saint Jacques-de-la-Lande, France</li>
-            <li><strong>Contact :</strong> Maureen HOUITTE - <a href="mailto:maureen.houitte@supdevinci.fr">maureen.houitte@supdevinci.fr</a>
-            </li>
         </ul>
     </section>
 </header>
@@ -40,32 +37,29 @@
     <section>
         <section>
             <h2>Objectif</h2>
-            <p>Après 6 mois de formation, 2 mois de stage, je recherche une entreprise pour m’accompagner pour la suite
-                de
-                ma reconversion.</p>
-            <p> Je suis disponible à partir de juillet 2024.</p>
-            <p> Je souhaite ensuite poursuivre ma reconversion
-                en Master.</p>
+            <p>Je recherche d'une entreprise pour poursuivre mes études en <strong>Mastère Développement Full-Stack</strong></p>
+            <p>Disponible : <strong>septembre 2025.</strong></p>
+            <p>Durée : <strong>2ans</strong></p>
+            <p>École : <strong>Sup de Vinci - Rennes</strong></p>
         </section>
+        <hr>
         <section>
             <h2>Expériences</h2>
             <article>
                 <h3>Stagiaire Développement Web - AFRODOMDEV</h3>
                 <p><em>Avril 2024 à mai 2024</em></p>
                 <ul>
-                    <li><strong>Développement du site e-commerce "Spicy-Shot"</strong></li>
-                    <li>Maquettage des interfaces utilisateurs avec Figma.</li>
+                    <li><strong>Réalisation du site e-commerce "Spicy-Shot"</strong></li>
+                    <li>Conception d'interfaces utilisateurs avec <strong>Figma</strong>.</li>
                     <li>Développement de la partie back et front à l’aide de <strong>Symfony 6.4</strong>,
                         <strong>Twig</strong>, <strong>Tailwind</strong>, <strong>JavaScript</strong>,
                         internationalisation,
                         tests unitaires.
                     </li>
-                    <li>Manipulation d’une base de données <strong>MariaDB</strong> et de l’ORM
-                        <strong>Doctrine</strong>.
+                    <li>Utilisation d’une base de données <strong>MariaDB</strong> et de l’ORM <strong>Doctrine</strong>.
                     </li>
-                    <li>Développement dans un environnement <strong>Docker</strong> et les outils Composer, Yarn,
-                        WebPack
-                        Encore, GitHub, PhpStorm.
+                    <li>Développement dans un environnement <strong>Linux</strong> et <strong>Docker</strong> et les outils <strong>Composer</strong>, <strong>Yarn</strong>,
+                        <strong>WebPack Encore</strong>, <strong>GitHub</strong>, <strong>PhpStorm</strong>.
                     </li>
                 </ul>
             </article>
@@ -73,29 +67,15 @@
                 <h3>Projet Informatiques - ENI Ecole d'Informatique</h3>
                 <p><em>Octobre 2023 à avril 2024</em></p>
                 <ul>
-                    <li><p><strong>Développement de “Brain Pop!”</strong></p> - Un jeu de Memory avec
-                        <strong>HTML</strong>,
-                        <strong>CSS</strong> et <strong>JavaScript</strong>.
+                    <li><p><strong>Projet “NullPointerException”</strong> (en équipe)</p>
+                        - Site d’enchères réalisé avec <strong>Java Spring Boot</strong> et <strong>SQL Server</strong> : application web organisée en couches.
                     </li>
-                    <li><p><strong>Développement de “NullPointerException”</strong> (en équipe)</p> - Un site d’enchères
-                        sous
-                        <strong>Java Spring Boot</strong> et <strong>SQL Server</strong> : application web organisée en
-                        couches.
+                    <li><p><strong>Projet “Sortir.com”</strong> (en équipe)</p>
+                        - Site d’organisation d’événements avec <strong>PHP Symfony</strong>, <strong>Doctrine</strong> et <strong>MySQL</strong>
                     </li>
-                    <li><p><strong>Analyse, Conception et développement de “Sortir.com”</strong> (en équipe)</p> - Un
-                        site
-                        d’organisation d’événements avec <strong>Symfony</strong>, <strong>Doctrine</strong> et <strong>MySQL</strong>
-                        : définition de test, set d’outils de passage des tests.
+                    <li><p><strong>Projet “Brain Pop!”</strong></p>
+                        - Un jeu de Memory avec <strong>HTML</strong>, <strong>CSS</strong> et <strong>JavaScript</strong>.
                     </li>
-                </ul>
-            </article>
-            <article>
-                <h3>Auto-formation - Home Sweet Home!</h3>
-                <p><em>Janvier 2023 à octobre 2023</em></p>
-                <ul>
-                    <li><p><strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong></p> -
-                        <em>OpenClassRoom</em>,
-                        <em>freeCodeCamp</em>, <em>Udemy</em>, <em>CodingGame</em>, <em>CodeWar</em></li>
                 </ul>
             </article>
             <article>
@@ -109,60 +89,63 @@
         <h2>Compétences</h2>
         <article>
             <h3>Langages</h3>
-            <ul>
+            <ol>
                 <li><strong>Java</strong></li>
                 <li><strong>PHP</strong></li>
                 <li><strong>SQL</strong></li>
                 <li><strong>HTML5</strong></li>
                 <li><strong>CSS3</strong></li>
                 <li><strong>JavaScript</strong></li>
-            </ul>
+            </ol>
         </article>
-
+        <hr>
         <article>
             <h3>Environnements</h3>
-            <ul>
+            <ol>
                 <li><strong>IntelliJ</strong></li>
                 <li><strong>PhpStorm</strong></li>
                 <li><strong>WebStorm</strong></li>
                 <li><strong>GitHub</strong></li>
                 <li><strong>Docker</strong></li>
-            </ul>
+            </ol>
         </article>
-
+        <hr>
         <article>
             <h3>Library/Framework</h3>
-            <ul>
+            <ol>
                 <li><strong>SpringBoot</strong></li>
                 <li><strong>Symfony</strong></li>
                 <li><strong>Angular</strong></li>
                 <li><strong>Express.js</strong></li>
                 <li><strong>Bootstrap</strong></li>
                 <li><strong>Tailwind</strong></li>
-            </ul>
+            </ol>
         </article>
+        <hr>
         <article>
             <h3>ORM</h3>
-            <ul>
+            <ol>
                 <li><strong>Doctrine</strong></li>
-            </ul>
+            </ol>
         </article>
+        <hr>
         <article>
             <h3>Méthodes</h3>
-            <ul>
+            <ol>
                 <li><strong>Agile</strong></li>
                 <li><strong>UML</strong></li>
                 <li><strong>MVC</strong></li>
                 <li><strong>développement en couches</strong></li>
-            </ul>
+            </ol>
         </article>
+        <hr>
         <article>
             <h3>Base De Données</h3>
-            <ul>
+            <ol>
                 <li><strong>SQL Server</strong></li>
                 <li><strong>MySQL</strong></li>
                 <li><strong>MongoDB</strong></li>
-            </ul>
+            </ol>
         </article>
     </section>
 
@@ -170,13 +153,17 @@
         <section>
             <h2>Qualités Professionnelles</h2>
             <ul>
-                <li><strong>Rigueur</strong></li>
-                <li><strong>Curiosité</strong></li>
-                <li><strong>Créativité</strong></li>
-                <li><strong>Travail d'équipe</strong></li>
-                <li><strong>Adaptabilité</strong></li>
+                <li><strong>Constance</strong> : <br> Capacité à travailler régulièrement + de 35h en fournissant la
+                    même qualité de travail dans des conditions souvent difficiles : travaille au chaud/froid, station
+                    debout, piétinement…
+                </li>
+                <li><strong>Collaboration</strong></li>
+                <li><strong>Agilité </strong></li>
+                <li><strong>Curiosité professionnelle</strong></li>
+                <li><strong>Inventivité</strong></li>
             </ul>
         </section>
+        <hr>
         <section>
             <h2>Formation</h2>
             <article>
@@ -187,7 +174,18 @@
                     </li>
                 </ul>
             </article>
-
+            <article>
+                <h3>Auto-formation - Home Sweet Home!</h3>
+                <p><em>Janvier 2023 à octobre 2023</em></p>
+                <ul>
+                    <li>
+                        <p>
+                            Apprentissage du développement web : <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>
+                        </p>
+                        -<em>OpenClassRoom</em>, <em>freeCodeCamp</em>, <em>Udemy</em>, <em>CodingGame</em>, <em>CodeWar</em>
+                    </li>
+                </ul>
+            </article>
             <article>
                 <h3>Bac Pro Cuisine - Lycée Hôtelier de Dinard</h3>
                 <p><em>Septembre 2006 à juin 2008</em></p>
@@ -204,10 +202,12 @@
                 </ul>
             </article>
         </section>
+        <hr>
         <section>
             <h2>Langue</h2>
             <p><strong>Anglais :</strong> Niveau B1</p>
         </section>
+        <hr>
         <section>
             <h2>Centres d'intérêt</h2>
             <ul>
