--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2>Développeur Informatique</h2>
         </div>
     </section>
-    <section class="div1">
+    <section>
         <h2>Informations Personnelles</h2>
         <ul>
             <li><strong>Âge :</strong> 34 ans</li>
