--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <ul>
                 <li><strong>Constance</strong> :<br>
                     Capacité à travailler régulièrement + de 35h en fournissant la
-                    même qualité de travail dans des conditions souvent difficiles : travaille au chaud/froid, station
+                    même qualité de travail dans des conditions souvent difficiles : travail au chaud/froid, station
                     debout, piétinement…
                 </li>
                 <li><strong>Collaboration</strong> :<br>
