--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <meta name="description"
           content="Antoine Ferron, développeur informatique, cherche une entreprise pour continuer sa formation en informatique et réaliser un Master. Découvrez ses compétences, expériences et formations.">
     <meta name="google-site-verification" content="c2gLXZP7xpLUbFsa4cqss5xXBqK_IW3vgUxRyboxmkE" />
+    <meta property="og:title" content="Antoine Ferron - Développeur">
+    <meta property="og:description" content="Antoine Ferron, développeur informatique, cherche une entreprise pour continuer sa formation en informatique et réaliser un Master. Découvrez ses compétences, expériences et formations.">
+    <meta property="og:image" content="https://antoine-ferron.fr/antoine-ferron.webp">
+    <meta property="og:url" content="https://antoine-ferron.fr">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="fr_FR">
+    <meta property="og:site_name" content="Antoine Ferron - Développeur informatique">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&family=Julius+Sans+One&display=swap"
@@ -38,9 +45,9 @@
     <section>
         <section>
             <h2>Objectif</h2>
-            <p>Je recherche d'une entreprise pour poursuivre mes études en <strong>Mastère Développement Full-Stack</strong></p>
+            <p>Je recherche une entreprise pour poursuivre mes études en <strong>Mastère Développement Full-Stack</strong></p>
             <p>Disponible : <strong>septembre 2025.</strong></p>
-            <p>Durée : <strong>2ans</strong></p>
+            <p>Durée : <strong>2 ans</strong></p>
             <p>École : <strong>Sup de Vinci - Rennes</strong></p>
         </section>
         <hr>
@@ -65,7 +72,7 @@
                 </ul>
             </article>
             <article>
-                <h3>Projet Informatiques - ENI Ecole d'Informatique</h3>
+                <h3>Projets Informatiques - ENI Ecole d'Informatique</h3>
                 <p><em>Octobre 2023 à avril 2024</em></p>
                 <ul>
                     <li><p><strong>Projet “NullPointerException”</strong> (en équipe)</p>
@@ -136,12 +143,12 @@
                 <li><strong>Agile</strong></li>
                 <li><strong>UML</strong></li>
                 <li><strong>MVC</strong></li>
-                <li><strong>développement en couches</strong></li>
+                <li><strong>Développement en couches</strong></li>
             </ol>
         </article>
         <hr>
         <article>
-            <h3>Base De Données</h3>
+            <h3>Bases de Données</h3>
             <ol>
                 <li><strong>SQL Server</strong></li>
                 <li><strong>MySQL</strong></li>
@@ -160,18 +167,17 @@
                     debout, piétinement…
                 </li>
                 <li><strong>Collaboration</strong> :<br>
-                    Collaboration avec les différents acteurs de l'entreprises et fournisseurs pour évaluer les besoins, gérer les stocks, et optimiser l'organisation collective. Déterminer les tache de chacun au sein de l'équipe en pâtisserie.</li>
+                    Collaboration avec les différents acteurs de l'entreprise et fournisseurs pour évaluer les besoins, gérer les stocks, et optimiser l'organisation collective. Déterminer les tâches de chacun au sein de l'équipe en pâtisserie.</li>
                 <li><strong>Agilité </strong> :<br>
                     S’adapter aux changements au sein de l'équipe et aux besoins de l'entreprise et des clients, en ajustant sa méthode de travail et en réorganisant la production (commande client de dernière minute, fêtes…).</li>
                 <li><strong>Curiosité professionnelle</strong> :<br>
-                    Grand intérêt pour la veille technologique, avec le suivis de différents médias pour. se tenir informé des dernières techniques et modes. Mettre en applications ses nouveaux acquis et les transmettre au reste de l'équipe.
+                    Grand intérêt pour la veille technologique, avec le suivi de différents médias pour se tenir informé des dernières techniques et modes. Mettre en application ses nouveaux acquis et les transmettre au reste de l'équipe.
                 </li>
                 <li><strong>Inventivité</strong> : <br>
                     Participer activement à l’évolution de l'entreprise en proposant des idées novatrices qui ont amené à la création de nouveaux produits (éclair 100% fruits, Paris-Brest croustillant, Crookie).
                 </li>
                 <li>
-                    Ces qualités m'ont permis par exemple d’être sélectionné pour participer à <strong>"La meilleur Boulangerie"</strong> sur M6 en 2017 ( final nationale), ou de prendre les responsabilités de l'<strong>adjoint au chef de rayon</strong> à Intermarché.
-
+                    Ces qualités m'ont permis par exemple d’être sélectionné pour participer à <strong>"La Meilleure Boulangerie"</strong> sur M6 en 2017 (finale nationale), ou de prendre les responsabilités de l'<strong>adjoint au chef de rayon</strong> à Intermarché.
                 </li>
             </ul>
         </section>
@@ -202,7 +208,7 @@
                 <h3>Bac Pro Cuisine - Lycée Hôtelier de Dinard</h3>
                 <p><em>Septembre 2006 à juin 2008</em></p>
                 <ul>
-                    <li>Apprentissage du métier de Cuisinier.</li>
+                    <li>Apprentissage du métier de cuisinier.</li>
                 </ul>
             </article>
 
@@ -223,9 +229,9 @@
         <section>
             <h2>Centres d'intérêt</h2>
             <ul>
-                <li><strong>Cinéma :</strong> Science Fiction, Comédie, Horreur, Anime, Séries</li>
-                <li><strong>Lectures :</strong> Science-Fiction, Heroic Fantasy</li>
-                <li><strong>Jeux Vidéos :</strong> RPG, Stratégie, Gestion</li>
+                <li><strong>Cinéma :</strong> Science-fiction, Comédie, Horreur, Anime, Séries</li>
+                <li><strong>Lectures :</strong> Science-fiction, Heroic Fantasy</li>
+                <li><strong>Jeux Vidéo :</strong> RPG, Stratégie, Gestion</li>
             </ul>
         </section>
     </section>
