--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Antoine Ferron - Développeur Web et Mobile</title>
+    <title>Antoine Ferron - Développeur informatique</title>
     <meta name="description"
           content="Antoine Ferron, développeur informatique, cherche une entreprise pour continuer sa formation en informatique et réaliser un Master. Découvrez ses compétences, expériences et formations.">
     <meta name="google-site-verification" content="c2gLXZP7xpLUbFsa4cqss5xXBqK_IW3vgUxRyboxmkE" />
     <meta property="og:title" content="Antoine Ferron - Développeur">
     <meta property="og:description" content="Antoine Ferron, développeur informatique, cherche une entreprise pour continuer sa formation en informatique et réaliser un Master. Découvrez ses compétences, expériences et formations.">
-    <meta property="og:image" content="https://antoine-ferron.fr/antoine-ferron.webp">
+    <meta property="og:image" content="https://antoine-ferron.fr/antoine-ferron-developpeur.webp">
     <meta property="og:url" content="https://antoine-ferron.fr">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="fr_FR">
@@ -19,11 +19,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&family=Julius+Sans+One&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "WebPage",
+            "name": "Antoine Ferron - Développeur Web et Mobile",
+            "description": "Antoine Ferron, développeur informatique, cherche une entreprise pour continuer sa formation en informatique et réaliser un Master.",
+            "image": "https://antoine-ferron.fr/antoine-ferron-developpeur.webp",
+            "url": "https://antoine-ferron.fr"
+        }
+    </script>
 </head>
 <body>
 <header>
     <section>
-        <img src="./antoine-ferron.webp" alt="Photo de Antoine Ferron">
+        <img src="./antoine-ferron-developpeur.webp" alt="Photo de Antoine Ferron">
         <div>
             <h1>Antoine Ferron</h1>
             <h2>Développeur Informatique</h2>
