--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
 <header>
     <section>
-        <img src="./antoine-ferron-developpeur.webp" alt="Photo de Antoine Ferron">
+        <img src="./antoine-ferron-developpeur.webp" alt="Photo de Antoine Ferron" width="133" height="200">
         <div>
             <h1>Antoine Ferron</h1>
             <h2>Développeur Informatique</h2>
