--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Antoine Ferron - Développeur informatique</title>
     <meta name="description"
-          content="Antoine Ferron, développeur informatique, cherche une entreprise pour continuer sa formation en informatique et réaliser un Master. Découvrez ses compétences, expériences et formations.">
+          content="Antoine Ferron, développeur informatique Java - PHP. Découvrez ses compétences, expériences et formations.">
     <meta name="google-site-verification" content="c2gLXZP7xpLUbFsa4cqss5xXBqK_IW3vgUxRyboxmkE" />
 
     <meta property="og:title" content="Antoine Ferron - Développeur">
-    <meta property="og:description" content="Antoine Ferron, développeur informatique, cherche une entreprise pour continuer sa formation en informatique et réaliser un Master. Découvrez ses compétences, expériences et formations.">
+    <meta property="og:description" content="Antoine Ferron, développeur informatique Java - PHP. Découvrez ses compétences, expériences et formations.">
     <meta property="og:image" content="https://antoine-ferron.fr/antoine-ferron-developpeur.webp">
     <meta property="og:url" content="https://antoine-ferron.fr">
     <meta property="og:type" content="website">
@@ -21,7 +21,7 @@
             "@context": "https://schema.org",
             "@type": "WebPage",
             "name": "Antoine Ferron - Développeur Web et Mobile",
-            "description": "Antoine Ferron, développeur informatique, cherche une entreprise pour continuer sa formation en informatique et réaliser un Master.",
+            "description": "Antoine Ferron, développeur informatique Java - PHP. Découvrez ses compétences, expériences et formations.",
             "image": "https://antoine-ferron.fr/antoine-ferron-developpeur.webp",
             "url": "https://antoine-ferron.fr"
         }
